[gd_scene load_steps=22 format=3 uid="uid://61jtpdjlbiis"]

[ext_resource type="Script" path="res://pause_menu.gd" id="1_cbh7p"]
[ext_resource type="FontFile" uid="uid://bnwk4n3m2cvod" path="res://Stormfaze.otf" id="2_0hm8v"]
[ext_resource type="StyleBox" uid="uid://qvk5pbu253vp" path="res://HomeButtonNorm.tres" id="2_dg4ju"]
[ext_resource type="StyleBox" uid="uid://cx3dhrk2u0a8t" path="res://HomeButtonHover.tres" id="3_pbtpv"]
[ext_resource type="StyleBox" uid="uid://b6mpyg5jku6na" path="res://Focus.tres" id="4_juriw"]
[ext_resource type="Texture2D" uid="uid://rsgquw8mfna" path="res://icons8-settings-color/icons8-settings-240.png" id="5_bjqhc"]
[ext_resource type="Texture2D" uid="uid://df14kntwec35p" path="res://icons8-settings-color-hover/icons8-settings-240.png" id="6_abs7o"]
[ext_resource type="Texture2D" uid="uid://dll56fjywxt5a" path="res://icons8-settings-color-pressed/icons8-settings-240.png" id="6_dvcf7"]
[ext_resource type="Texture2D" uid="uid://2ug63greoxiu" path="res://icons8-back/icons8-back-96.png" id="8_r787l"]
[ext_resource type="Texture2D" uid="uid://pc4uprw51obf" path="res://icons8-back/icons8-back-96 (2).png" id="9_7ngjm"]
[ext_resource type="Texture2D" uid="uid://cfblvtoiwoyeq" path="res://icons8-back/icons8-back-96 (1).png" id="10_lk3mb"]
[ext_resource type="Texture2D" uid="uid://di1rrv7xa7aps" path="res://icons8-audio/icons8-no-audio-100.png" id="11_8bhba"]
[ext_resource type="Texture2D" uid="uid://ctt1squ05v3b7" path="res://icons8-audio/icons8-sphere-16.png" id="11_hthis"]
[ext_resource type="Texture2D" uid="uid://b0de4ra3vs4tl" path="res://icons8-audio/icons8-audio-100.png" id="12_uc4uw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_10j1y"]
bg_color = Color(0.137255, 0.137255, 0.137255, 0.615686)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r1n0j"]
bg_color = Color(0.6, 0.6, 0.6, 0)
draw_center = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3mb41"]
bg_color = Color(0.6, 0.6, 0.6, 0)
draw_center = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dflet"]
bg_color = Color(0.6, 0.6, 0.6, 0)
draw_center = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nxn8v"]
bg_color = Color(0.6, 0.6, 0.6, 0)
draw_center = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kl8da"]
bg_color = Color(0.6, 0.6, 0.6, 0)
draw_center = false

[sub_resource type="SpriteFrames" id="SpriteFrames_6uth5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_8bhba")
}],
"loop": true,
"name": &"Audio-off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_uc4uw")
}],
"loop": true,
"name": &"Audio-on",
"speed": 5.0
}]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cbh7p")

[node name="MainPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_10j1y")

[node name="ResumeButton" type="Button" parent="MainPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -376.0
offset_top = -220.0
offset_right = 392.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_0hm8v")
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = ExtResource("2_dg4ju")
theme_override_styles/hover = ExtResource("3_pbtpv")
theme_override_styles/pressed = ExtResource("3_pbtpv")
theme_override_styles/focus = ExtResource("4_juriw")
text = "Resume"

[node name="QuitButton" type="Button" parent="MainPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -384.0
offset_top = 36.0
offset_right = 384.0
offset_bottom = 228.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_0hm8v")
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = ExtResource("2_dg4ju")
theme_override_styles/hover = ExtResource("3_pbtpv")
theme_override_styles/pressed = ExtResource("3_pbtpv")
theme_override_styles/focus = ExtResource("4_juriw")
text = "Quit
"

[node name="SettingsButton" type="TextureButton" parent="MainPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -192.0
offset_top = -184.0
offset_right = -64.0
offset_bottom = -56.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("5_bjqhc")
texture_pressed = ExtResource("6_dvcf7")
texture_hover = ExtResource("6_abs7o")
ignore_texture_size = true
stretch_mode = 4

[node name="SettingsPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_10j1y")

[node name="BackButton" type="TextureButton" parent="SettingsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -192.0
offset_top = -184.0
offset_right = -64.0
offset_bottom = -56.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("8_r787l")
texture_pressed = ExtResource("9_7ngjm")
texture_hover = ExtResource("10_lk3mb")
ignore_texture_size = true
stretch_mode = 4

[node name="Music-volume" type="Node2D" parent="SettingsPanel"]

[node name="HSlider" type="HSlider" parent="SettingsPanel/Music-volume"]
top_level = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -92.0
offset_right = 256.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 2
theme_override_icons/grabber = ExtResource("11_hthis")
theme_override_icons/grabber_highlight = ExtResource("11_hthis")
step = 2.0
value = 80.0
rounded = true
tick_count = 2

[node name="AudioOnOffButton" type="Button" parent="SettingsPanel/Music-volume/HSlider"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -304.0
offset_top = -32.0
offset_right = -240.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_r1n0j")
theme_override_styles/hover = SubResource("StyleBoxFlat_3mb41")
theme_override_styles/pressed = SubResource("StyleBoxFlat_dflet")
theme_override_styles/disabled = SubResource("StyleBoxFlat_nxn8v")
theme_override_styles/focus = SubResource("StyleBoxFlat_kl8da")
flat = true
metadata/_edit_group_ = true

[node name="AudioSprites" type="AnimatedSprite2D" parent="SettingsPanel/Music-volume/HSlider/AudioOnOffButton"]
position = Vector2(32, 32)
scale = Vector2(0.64, 0.64)
sprite_frames = SubResource("SpriteFrames_6uth5")
animation = &"Audio-on"
autoplay = "Audio-on"

[node name="Label" type="Label" parent="SettingsPanel/Music-volume"]
top_level = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -140.0
offset_right = 256.0
offset_bottom = -91.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_0hm8v")
theme_override_font_sizes/font_size = 40
text = "Music volume"
horizontal_alignment = 1

[node name="SFX-volume" type="Node2D" parent="SettingsPanel"]

[node name="HSlider" type="HSlider" parent="SettingsPanel/SFX-volume"]
top_level = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = 36.0
offset_right = 256.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_icons/grabber = ExtResource("11_hthis")
theme_override_icons/grabber_highlight = ExtResource("11_hthis")
step = 2.0
value = 80.0
rounded = true
tick_count = 2

[node name="AudioOnOffButton" type="Button" parent="SettingsPanel/SFX-volume/HSlider"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -304.0
offset_top = -32.0
offset_right = -240.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_r1n0j")
theme_override_styles/hover = SubResource("StyleBoxFlat_3mb41")
theme_override_styles/pressed = SubResource("StyleBoxFlat_dflet")
theme_override_styles/disabled = SubResource("StyleBoxFlat_nxn8v")
theme_override_styles/focus = SubResource("StyleBoxFlat_kl8da")
flat = true

[node name="AudioSprites" type="AnimatedSprite2D" parent="SettingsPanel/SFX-volume/HSlider/AudioOnOffButton"]
position = Vector2(32, 32)
scale = Vector2(0.64, 0.64)
sprite_frames = SubResource("SpriteFrames_6uth5")
animation = &"Audio-on"
autoplay = "Audio-on"

[node name="Label" type="Label" parent="SettingsPanel/SFX-volume"]
top_level = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -12.0
offset_right = 256.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_0hm8v")
theme_override_font_sizes/font_size = 40
text = "SFX volume"
horizontal_alignment = 1

[connection signal="pressed" from="MainPanel/ResumeButton" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MainPanel/QuitButton" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="MainPanel/SettingsButton" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="SettingsPanel/BackButton" to="." method="_on_back_pressed"]
[connection signal="drag_ended" from="SettingsPanel/Music-volume/HSlider" to="." method="_on_h_slider_drag_ended"]
[connection signal="pressed" from="SettingsPanel/Music-volume/HSlider/AudioOnOffButton" to="." method="_on_music_mute_pressed"]
[connection signal="drag_ended" from="SettingsPanel/SFX-volume/HSlider" to="." method="_on_sfx_h_slider_drag_ended"]
[connection signal="pressed" from="SettingsPanel/SFX-volume/HSlider/AudioOnOffButton" to="." method="_on_sfx_mute_pressed"]
